fixed ui/ux on mobile

--- a/src/components/Board.css
+++ b/src/components/Board.css
@@ -1,17 +1,17 @@
 .Board {
   display: grid;
   grid-gap: 2px;
-  width: 27.5rem;
-  height: 45rem;
+  width: 20rem;
+  height: calc(2 * 20rem);
+  /* height is set to 4 times the width */
 
   border: 2px solid rgb(255, 255, 255);
   border-radius: 10px;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
 }
-
 @media (max-width: 720px) {
   .Board {
-    width: 22.91rem;
-    height: 37.5rem;
+    width: 15rem;
+    height: calc(2 * 15rem);
   }
 }
