--- a/src/components/Preview.css
+++ b/src/components/Preview.css
@@ -1,21 +1,19 @@
 .Preview {
   background: rgba(0, 0, 0, 0.1);
   border: 2px solid rgba(255, 255, 255, 0.937);
-  border-radius: 10px;
+  border-radius: 0.5rem;
 }
 
 .Preview-board {
   display: grid;
-  grid-gap: 2px;
   grid-template-rows: repeat(4, 1fr);
   grid-template-columns: repeat(4, 1fr);
   width: 8rem;
-  height: 8rem;
+  height: calc(1 * 8rem);
 }
-
 @media (max-width: 720px) {
   .Preview-board {
-    width: 5rem;
-    height: 5rem;
+    width: 4rem;
+    height: calc(1 * 4rem);
   }
 }
